# calendar-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  calendars.go  database.go  events.go  go.mod  go.sum  kratos.go  mail.go  main.go  schema.sql  tasks.go
.github/workflows/: build.yml
migrations/: 20240903234240_create-initial-schema.sql
src/: db.rs  events.rs  main.rs  utils.rs
